// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`invokeEnroll (integration) given: [case1] repo with roles linked when: [t0] enroll claude --roles mechanic then: generates unique enrollment config with only mechanic hooks: journey1-replace-mechanic 1`] = `
{
  "hooks": {
    "SessionStart": [
      {
        "hooks": [
          {
            "author": "repo=.this/role=mechanic",
            "command": "echo mechanic boot",
            "type": "command",
          },
        ],
        "matcher": "*",
      },
    ],
  },
}
`;

exports[`invokeEnroll (integration) given: [case1] repo with roles linked when: [t1] enroll claude --roles -driver then: generates config without driver hooks: journey2-subtract-driver 1`] = `
{
  "hooks": {
    "SessionStart": [
      {
        "hooks": [
          {
            "author": "repo=.this/role=mechanic",
            "command": "echo mechanic boot",
            "type": "command",
          },
          {
            "author": "repo=.this/role=ergonomist",
            "command": "echo ergonomist boot",
            "type": "command",
          },
        ],
        "matcher": "*",
      },
    ],
  },
}
`;

exports[`invokeEnroll (integration) given: [case4] spec parse errors when: [t2] enroll claude --roles mechnic (typo) then: throws error with suggestion: journey3-typo-error 1`] = `
"BadRequestError: role 'mechnic' not found, did you mean 'mechanic'?

{
  "role": "mechnic",
  "rolesLinked": [
    "driver",
    "mechanic"
  ],
  "suggestion": "mechanic"
}"
`;
